kubernetes/apps/networking/ingresses/ingressRoutes/external-services/minio/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app minio
  namespace: networking
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ExternalName
  externalName: ${NAS_ADDR}
  ports:
    - name: webui
      port: 9102
      protocol: TCP
      targetPort: 9102
    - name: api
      port: 9101
      protocol: TCP
      targetPort: 9101
